--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 click
-stups-cli-support>=1.1.13
+stups-cli-support>=1.1.15
 stups-mai
 stups-piu
 stups-senza>=2.1.64
@@ -8,4 +8,5 @@ stups-pierone
 stups-fullstop
 stups-kio
 zalando-aws-cli>=1.1.4
-zalando-kubectl>=0.16
+zalando-kubectl>=0.21
+zalando-deploy-cli>=0.18
