--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
 click
-stups-cli-support>=1.1.15
-stups-piu
-stups-senza>=2.1.66
-stups-zign>=1.1.28
-stups-pierone
-stups-fullstop
-stups-kio
-zalando-aws-cli>=1.1.4
-zalando-kubectl>=1.6.0
-zalando-deploy-cli>=0.22
+stups-cli-support>=1.1.20
+stups-piu>=1.1.16
+stups-senza>=2.1.104
+stups-zign>=1.1.31
+stups-pierone>=1.1.31
+stups-fullstop>=1.1.31
+stups-kio>=0.1.20
+zalando-aws-cli>=1.2.4.22
+zalando-kubectl>=1.9.3.39
